# PointClouds_Simple_Viewer

./: CMakeLists.txt  LICENSE  README.md
sample_point_clouds/: cat.pcd  horse.pcd  lion.pcd  man.pcd  wolf.pcd
src/: pointCloudUtils.cpp  pointCloudUtils.h  simple_pcd_viewer.cpp
